Continuing work on engine

--- a/index.html
+++ b/index.html
@@ -4,7 +4,14 @@
   <head>
     <title>Cannon Game</title>
     <link rel="stylesheet" href="styles/main.css">
+
+    <script src="js/jquery-3.3.1.js"></script>
+    <script src="js/classes/Game.js"></script>
+    <script src="js/classes/Shape.js"></script>
+    <script src="js/Main.js"></script>
+
   </head>
   <body>
+    <div id="gameboard"></div>
   </body>
 </html>
