Can't shoot during level change, made things capital for looks

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     <div id="board">
       <div id="gameboard"></div>
       <div id="scoreboard">
-        <span class="score-label">Level <span id="level_num"></span></span>
-        <span class="score-label">Score: <span id="score_num"></span></span>
-        <span class="score-label">Shots: <span id="shot_num"></span></span>
-        <span class="score-label">Needed: <span id="need_num"></span></span>
+        <span class="score-label">LEVEL <span id="level_num"></span></span>
+        <span class="score-label">SCORE: <span id="score_num"></span></span>
+        <span class="score-label">SHOTS: <span id="shot_num"></span></span>
+        <span class="score-label">NEEDED: <span id="need_num"></span></span>
       </div>
     </div>
     <audio id="shoot" src="res/shoot.mp3" preload="auto" controls="none" style="display: none;"></audio>
