Added main menu, div cleared on game end.
Probably done now, maybe small touches here and there.

--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
         <span class="score-label">NEEDED: </span><span class="score-num" id="need_num"></span>
         </div>
       </div>
+      <div id="nav-menu">
+        <span id='menu-btn' class='top-pad txt-btn'>MENU</span>
+      </div>
     </div>
     <audio id="shoot" src="res/shoot.mp3" preload="auto" controls="none" style="display: none;"></audio>
     <audio id="hit" src="res/hit.mp3" preload="auto" controls="none" style="display: none;"></audio>
